--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -19,7 +19,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-2" style="background:red;">
-			Test
+			<SubredditList/>
 		</div>
 		<div class="col-10" style="background:blue;">
 			What
