--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -21,8 +21,10 @@
 		<div class="col-2" style="background:red;">
 			<SubredditList/>
 		</div>
-		<div class="col-10" style="background:blue;">
-			What
+		<div class="col-10">
+			{{#each model as |post|}}
+				<Post @model={{post}} />
+			{{/each}}
 		</div>
 	</div>
 </div>
