--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -18,15 +18,11 @@
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-2" style="background:red;">
+		<div class="col-2">
 			<SubredditList/>
 		</div>
 		<div class="col-10">
-			{{#each model as |post|}}
-				<Post @model={{post}} />
-			{{/each}}
+			{{outlet}}
 		</div>
 	</div>
 </div>
-
-{{outlet}}
