--- a/app/templates/components/post.hbs
+++ b/app/templates/components/post.hbs
@@ -1,2 +1,3 @@
-<h4>{{model.title}}</h4>
+<h5>{{#link-to "subreddit.post" "zzz" model.id}}{{model.title}}{{/link-to}}</h5>
+<p>{{model.title}} / {{model}}</p>
 <hr />
