--- a/app/templates/components/post.hbs
+++ b/app/templates/components/post.hbs
@@ -1,3 +1,10 @@
-<h5>{{#link-to "subreddit.post" "zzz" model.id}}{{model.title}}{{/link-to}}</h5>
-<p>{{model.title}} / {{model}}</p>
+
+
+<div class="left">
+</div>
+<div class="right">
+	<h5>{{#link-to "subreddit.post" "zzz" model.id}}{{model.title}}{{/link-to}}</h5>
+	<p>{{model.title}} / {{model}}</p>
+</div>
+
 <hr />
