--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,26 +1,44 @@
-{{#bs-navbar type="dark" backgroundColor="dark" collapsed=collapsed onCollapse=(action (mut collapsed) true) onExpand=(action (mut collapsed) false) as |navbar|}}
-  <div class="navbar-header">
-    {{navbar.toggle}}
-    {{#link-to "index" class="navbar-brand"}}{{config "APP.name"}}{{/link-to}}
-  </div>
-  {{#navbar.content}}
-    {{#navbar.nav as |nav|}}
-      {{#nav.item}}{{#nav.link-to "index"}}Home{{/nav.link-to}}{{/nav.item}}
-      {{#nav.dropdown as |dd|}}
-        {{#dd.toggle}}Dropdown <span class="caret"></span>{{/dd.toggle}}
-        {{#dd.menu as |ddm|}}
-          {{#ddm.item}}{{#ddm.link-to "index"}}Home{{/ddm.link-to}}{{/ddm.item}}
-        {{/dd.menu}}
-      {{/nav.dropdown}}
-    {{/navbar.nav}}
-  {{/navbar.content}}
-{{/bs-navbar}}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	{{#link-to "index" class="navbar-brand"}}{{config "APP.name"}}{{/link-to}}
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav mr-auto">
+			<!-- <li class="nav-item active">
+				{{#link-to "index" class="nav-link"}}Home{{/link-to}}
+			</li> -->
+			<li class="nav-item">
+				<span class="navbar-text">{{formattedCurrentSubreddit}}</span>
+			</li>
+		</ul>
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Dropdown
+				</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<a class="dropdown-item" href="#">Action</a>
+					<a class="dropdown-item" href="#">Another action</a>
+					<div class="dropdown-divider"></div>
+					<a class="dropdown-item" href="#">Something else here</a>
+				</div>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+			</li>
+		</ul>
+		<!-- <form class="form-inline my-2 my-lg-0">
+			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+		</form> -->
+	</div>
+</nav>
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-2">
-			<SubredditList/>
-		</div>
+		<SubredditList @model={{userSubreddits}} @onSelection={{action "goTo"}} />
 		<div class="col-10">
 			{{outlet}}
 		</div>
