--- a/app/templates/components/post-actions.hbs
+++ b/app/templates/components/post-actions.hbs
@@ -1,1 +1,1 @@
-<p>{{model.num_comments}} comments &middot; <a href="#">Give Award</a> &middot; <a href="#">Shares</a> &middot; <a href="#">Save</a> &middot; <a href="#">Hide</a> &middot; <a href="#">Report</a> &middot; {{model}}</p>
+<p><a href="#" {{action onComments (subcleaner model.subreddit_name_prefixed) model.id}}>{{model.num_comments}} comments</a> &middot; <a href="#">Give Award</a> &middot; <a href="#">Shares</a> &middot; <a href="#">Save</a> &middot; <a href="#">Hide</a> &middot; <a href="#">Report</a> &middot; {{model}}</p>
