--- a/app/styles/components/post.scss
+++ b/app/styles/components/post.scss
@@ -1,6 +1,9 @@
+$padding: 0.5em;
+
+
 .post {
 	display: flex;
-	padding: 0.5em;
+	padding: $padding;
 	background: $background-light;
 	border: 1px solid silver;
 	border-bottom: none;
@@ -10,13 +13,34 @@
 	}
 	
 	.score {
-		flex: 0 0 6em;
+		flex: 0 0 5em;
+		flex-direction: column;
+		padding-right: $padding;
+		
+		.up {
+			
+		}
+		
+		.down {
+			
+		}
+		
+		.votes {
+			margin-top: 0.3em;
+			margin-bottom: 0.3em;
+		}
+		
+		text-align: center;
 	}
 	.thumbnail {
 		// background: lightgrey;
+		img {
+			width: 5em;
+			border-radius: 0.2em;
+		}
 	}
 	.content {
 		flex-grow: 1;
-		padding-left: 0.5em;
+		padding-left: $padding;
 	}
 }
