--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -38,8 +38,11 @@
 
 <div class="container-fluid">
 	<div class="row">
-		<SubredditList @model={{userSubreddits}} @onSelection={{action "goTo"}} />
+		<SubredditList @model={{userSubreddits}} @defaults={{defaultSubreddits}} @onSelection={{action "goTo"}} />
 		<div class="col-10">
+			<div class="subnav">
+				Sort: Sort
+			</div>
 			{{outlet}}
 		</div>
 	</div>
