--- a/app/templates/components/post.hbs
+++ b/app/templates/components/post.hbs
@@ -26,5 +26,5 @@
 		&middot;
 		Posted by u/{{model.author_fullname}}
 	</p>
-	<PostActions @model={{model}} @onComments={{action onSelection}} />
+	<!-- <PostActions @model={{model}} @onComments={{action onSelection}} /> -->
 </div>
