--- a/app/templates/components/comment.hbs
+++ b/app/templates/components/comment.hbs
@@ -1,7 +1,15 @@
-<div class="comment ml-4">
-	<p><b>{{model.score}}</b> {{model.body}}</p>
-	{{#each model.replies as |comment|}}
-		<Comment @model={{comment}} />
-	{{/each}}
+<div class="comment">
+	<div class="inner ml-4">
+		<p>
+			<a href="#" {{action "toggleCollapsed"}}><i class="fa fa-{{if model.collapsed "plus" "minus"}}"></i></a>
+			<span class="badge badge-secondary">{{model.author_flair_text}}</span> <b>{{model.score}}</b> {{model.score}} points &middot; {{model.created}}
+		</p>
+		{{#unless model.collapsed}}
+			<p>{{model.body}}</p>
+			{{#each model.replies as |comment|}}
+				<Comment @model={{comment}} />
+			{{/each}}
+		{{/unless}}
+	</div>
 </div>
 <hr />
