--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,8 +1,6 @@
 <div class="row">
 	<div class="col-9">
-		{{#each model as |post|}}
-			<Post @model={{post}} @onSelection={{action "goToPost"}} />
-		{{/each}}
+		<Posts @model={{model}} @onSelection={{action "goToPost"}} />
 	</div>
 	<div class="col-3">
 		Feed Sidebar
