--- a/app/templates/subreddit.hbs
+++ b/app/templates/subreddit.hbs
@@ -1,1 +1,8 @@
-{{outlet}}
+<div class="row">
+	<div class="col-9">
+		{{outlet}}
+	</div>
+	<div class="col-3">
+		Subreddit Sidebar
+	</div>
+</div>
