--- a/app/templates/subreddit/index.hbs
+++ b/app/templates/subreddit/index.hbs
@@ -1,11 +1,2 @@
-<div class="row">
-	<div class="col-10">
-		{{#each model as |post|}}
-			<Post @model={{post}} />
-		{{/each}}
-	</div>
-	<div class="col-2">
-		Subreddit Sidebar
-	</div>
-</div>
+<Posts @model={{model}} @onSelection={{action "goToPost"}} />
 {{outlet}}
