--- a/app/styles/routes/subreddit/post.scss
+++ b/app/styles/routes/subreddit/post.scss
@@ -1,10 +1,10 @@
 .subreddit-post {
-	margin-top: 1.5em;
-	margin-left: 0.5em;
 	padding: 1em;
+	border-radius: 0.3em;
 	background: $background-light;
 	
 	.submission-image {
-		width: 100%;
+		max-width: 600px;
+		max-height: 600px;
 	}
 }
