--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,9 +1,12 @@
 <div class="row">
-	<div class="col-9">
+	<div class="col-9 no-padding py-3 pl-3 pr-0">
 		<Posts @model={{model}} @onSelection={{action "goToPost"}} />
 	</div>
-	<div class="col-3">
-		Feed Sidebar
+	<div class="col-3 no-padding p-3">
+		<Sidebar>
+			Feed Sidebar<br />
+			Test
+		</Sidebar>
 	</div>
 </div>
 
