--- a/app/templates/components/post.hbs
+++ b/app/templates/components/post.hbs
@@ -15,16 +15,18 @@
 	{{/if}}
 </div>
 <div class="content">
-	<h5>
+	<h6>
 		{{#link-to "subreddit.post" (subcleaner model.subreddit_name_prefixed) model.id class="text-dark"}}{{model.title}}{{/link-to}}
 		{{#unless model.is_self}}
 			<small><a href={{model.url}} target="_blank">{{model.url}}</a></small>
 		{{/unless}}
-	</h5>
-	<p>
+		<!-- <span class="badge badge-secondary">{{model}}</span> -->
+	</h6>
+	<p class="mb-2">
 		{{#link-to "subreddit" (subcleaner model.subreddit_name_prefixed)}}{{model.subreddit_name_prefixed}}{{/link-to}}
 		&middot;
 		Posted by u/{{model.author_fullname}}
+		{{time-ago model.created}}
 	</p>
-	<!-- <PostActions @model={{model}} @onComments={{action onSelection}} /> -->
+	<PostActions @model={{model}} @onComments={{action onSelection}} />
 </div>
