--- a/app/templates/components/post-actions.hbs
+++ b/app/templates/components/post-actions.hbs
@@ -1,1 +1,13 @@
-<p class="mb-0"><a href="#" {{action onComments (subcleaner model.subreddit_name_prefixed) model.id}}>{{model.num_comments}} comments</a> &middot; <a href="#">Give Award</a> &middot; <a href="#">Shares</a> &middot; <a href="#">Save</a> &middot; <a href="#">Hide</a> &middot; <a href="#">Report</a> &middot; {{model}}</p>
+<p class="mb-0">
+	<a href="#" {{action onComments (subcleaner model.subreddit_name_prefixed) model.id}}><i class="fa fa-comment"></i> {{model.num_comments}} comments</a>
+	&middot;
+	<a href="#"><i class="fas fa-coins"></i> Give Award</a>
+	&middot;
+	<a href="#"><i class="fa fa-sync"></i> Share</a>
+	&middot;
+	<a href="#"><i class="fa fa-ban"></i> Save</a>
+	&middot;
+	<a href="#"><i class="fa fa-ban"></i> Hide</a>
+	&middot;
+	<a href="#"><i class="fa fa-flag"></i> Report</a>
+</p>
