--- a/app/templates/components/post.hbs
+++ b/app/templates/components/post.hbs
@@ -1,14 +1,12 @@
 <div class="score">
-	<div class="up">
-		<i class="fa fa-arrow-up"></i>
-	</div>
-	<h6 class="votes">{{score model.score}}</h6>
-	<div class="down">
-		<i class="fa fa-arrow-down"></i>
-	</div>
+	<PostScore @model={{model}} />
 </div>
 <div class="thumbnail">
-	{{#if model.url}}
+	{{#if model.is_self}}
+		{{#link-to "subreddit.post" (subcleaner model.subreddit_name_prefixed) model.id}}
+			<img src="/images/self-post.png" />
+		{{/link-to}}
+	{{else}}
 		<a href={{model.url}} target="_blank">
 			<img src={{model.thumbnail}} />
 		</a>
@@ -18,14 +16,14 @@
 	<h6>
 		{{#link-to "subreddit.post" (subcleaner model.subreddit_name_prefixed) model.id class="text-dark"}}{{model.title}}{{/link-to}}
 		{{#unless model.is_self}}
-			<small><a href={{model.url}} target="_blank">{{model.url}}</a></small>
+			<small><a href={{model.url}} target="_blank">{{url-helper model.url}}</a></small>
 		{{/unless}}
 		<!-- <span class="badge badge-secondary">{{model}}</span> -->
 	</h6>
 	<p class="mb-2">
 		{{#link-to "subreddit" (subcleaner model.subreddit_name_prefixed)}}{{model.subreddit_name_prefixed}}{{/link-to}}
 		&middot;
-		Posted by u/{{model.author_fullname}}
+		Posted by {{#link-to "user" model.author_fullname}}u/{{model.author_fullname}}{{/link-to}}
 		{{time-ago model.created}}
 	</p>
 	<PostActions @model={{model}} @onComments={{action onSelection}} />
