--- a/app/templates/subreddit/post.hbs
+++ b/app/templates/subreddit/post.hbs
@@ -1,12 +1,13 @@
 <div class="subreddit-post">
+	<PostScore @model={{model}} />
 	<p>
 		{{#link-to "subreddit" (subcleaner model.subreddit_name_prefixed)}}{{model.subreddit_name_prefixed}}{{/link-to}}
 		&middot;
-		Posted by {{#link-to "subreddit" "apple"}}u/{{model.author.name}}{{/link-to}} {{time-ago model.created}}
+		Posted by {{#link-to "user" model.author.name}}u/{{model.author.name}}{{/link-to}} {{time-ago model.created}}
 	</p>
 	<h4>{{model.title}}</h4>
 	{{#unless model.is_self}}
-		<p><a href={{model.url}} target="_blank">{{model.url}}</a></p>
+		<p><a href={{model.url}} target="_blank">{{url-helper model.url}}</a></p>
 	{{/unless}}
 	
 	{{#if model.is_self}}
