--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -2,4 +2,4 @@ $background: rgb(219, 224, 229);
 $background-light: white;
 $progress-color: rgb(72, 165, 112);
 
-$comment-details: grey;
+$context-color: rgb(120, 124, 126);
