Changed post score width

--- a/app/styles/routes/subreddit/post.scss
+++ b/app/styles/routes/subreddit/post.scss
@@ -8,7 +8,7 @@
 		padding-bottom: 1em;
 		
 		.details {
-			padding-left: 1em;
+			// padding-left: 1em;
 			p {
 				// margin-bottom: 0.3em;
 				margin: 0;
