--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -3,3 +3,4 @@ $background-light: white;
 $progress-color: rgb(72, 165, 112);
 
 $context-color: rgb(120, 124, 126);
+$line-color: rgb(206, 212, 218);
