--- a/app/styles/routes/subreddit/post.scss
+++ b/app/styles/routes/subreddit/post.scss
@@ -8,11 +8,7 @@
 		padding-bottom: 1em;
 		
 		.details {
-			// padding-left: 1em;
-			p {
-				// margin-bottom: 0.3em;
-				margin: 0;
-			}
+			p { margin: 0; }
 			.title {
 				margin: 0.3em 0;
 			}
@@ -20,13 +16,21 @@
 		.context {
 			color: $context-color;
 		}
-		
 	}
 	
-	.submission-image {
-		max-width: 600px;
-		max-height: 600px;
+	.post-body {
+		margin-bottom: 1em;
+		img {
+			max-width: 600px;
+			max-height: 600px;
+		}
 	}
 	
+	.actions {
+		margin-bottom: 2em;
+	}
 	
+	.compose {
+		margin-bottom: 2em;
+	}
 }
