--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,12 @@
 {{notification-container position="bottom-left"}}
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+	<ul class="navbar-nav mr-3">
+		<li class="nav-item">
+			<button type="button" class="btn btn-outline-secondary"><span class="navbar-toggler-icon"></span></button>
+		</li>
+	</ul>
+	
+	
 	{{#link-to "index" class="navbar-brand"}}<i class="fa fa-rocket pr-1"></i> {{config "APP.name"}}{{/link-to}}
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -7,12 +14,6 @@
 	
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
-			<!-- <li class="nav-item active">
-				{{#link-to "index" class="nav-link"}}Home{{/link-to}}
-			</li> -->
-			<!-- <li class="nav-item">
-				<span class="navbar-text">{{formattedCurrentSubreddit}}</span>
-			</li> -->
 			<li class="nav-item">
 				<div class="btn-group">
 					<button type="button" class="btn btn-outline-success" {{action "goTo" currentSubreddit}}>{{formattedCurrentSubreddit}}</button>
@@ -27,10 +28,6 @@
 						<a class="dropdown-item" href="#">Separated link</a>
 					</div>
 				</div>
-				
-				
-				
-				<!-- <a class="nav-link p-0" href="#"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">{{formattedCurrentSubreddit}}</button></a> -->
 			</li>
 		</ul>
 		<ul class="navbar-nav ml-auto">
