--- a/app/styles/components/posts.scss
+++ b/app/styles/components/posts.scss
@@ -1,7 +1,5 @@
 .posts {
 	.subnav {
-		// padding-top: 1em;
-		// padding: 1em 0;
-		// background: $background-light;
+		padding-bottom: 1em;
 	}
 }
