--- a/app/templates/components/feed.hbs
+++ b/app/templates/components/feed.hbs
@@ -1,8 +1,8 @@
 <div class="row">
-	<div class="col-9 no-padding py-3 pl-3 pr-0">
+	<div class="col-9">
 		<Posts @model={{model}} @onSelection={{action onSelection}} />
 	</div>
-	<div class="col-3 no-padding p-3">
+	<div class="col-3">
 		<Sidebar>
 			Feed Sidebar<br />
 			Test
