--- a/app/templates/subreddit.hbs
+++ b/app/templates/subreddit.hbs
@@ -1,8 +1,8 @@
 <div class="row">
-	<div class="col-9 no-padding py-3 pl-3 pr-0">
+	<div class="col-9">
 		{{outlet}}
 	</div>
-	<div class="col-3 no-padding p-3">
+	<div class="col-3">
 		<Sidebar>
 			<h4>r/{{model.display_name}}</h4>
 			<h5>Subscribers: {{model.subscribers}}</h5>
