--- a/app/templates/components/post.hbs
+++ b/app/templates/components/post.hbs
@@ -4,11 +4,11 @@
 <div class="thumbnail">
 	{{#if model.is_self}}
 		{{#link-to "subreddit.post" (subcleaner model.subreddit_name_prefixed) model.id}}
-			<img src="/images/self-post.png" />
+			<img src="/images/self-post.png" alt="">
 		{{/link-to}}
 	{{else}}
-		<a href={{model.url}} target="_blank">
-			<img src={{model.thumbnail}} />
+		<a href={{model.url}} target="_blank" rel="noopener">
+			<img src={{model.thumbnail}} alt="">
 		</a>
 	{{/if}}
 </div>
@@ -16,14 +16,14 @@
 	<h6>
 		{{#link-to "subreddit.post" (subcleaner model.subreddit_name_prefixed) model.id class="text-dark"}}{{model.title}}{{/link-to}}
 		{{#unless model.is_self}}
-			<small><a href={{model.url}} target="_blank">{{url-helper model.url}}</a></small>
+			<small><a href={{model.url}} target="_blank" rel="noopener">{{url-helper model.url}}</a></small>
 		{{/unless}}
-		<!-- <span class="badge badge-secondary">{{model}}</span> -->
+		{{!-- <span class="badge badge-secondary">{{model}}</span> --}}
 	</h6>
 	<p class="mb-2">
 		{{#link-to "subreddit" (subcleaner model.subreddit_name_prefixed)}}{{model.subreddit_name_prefixed}}{{/link-to}}
 		&middot;
-		Posted by {{#link-to "user" model.author_fullname}}u/{{model.author_fullname}}{{/link-to}}
+		Posted by {{#link-to "user" model.author.name}}u/{{model.author.name}}{{/link-to}}
 		{{time-ago model.created}}
 	</p>
 	<PostActions @model={{model}} @onComments={{action onSelection}} />
