--- a/app/templates/feed.hbs
+++ b/app/templates/feed.hbs
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-9">
-		<Posts @model={{model}} @onSelection={{action onSelection}} />
+		{{outlet}}
 	</div>
 	<div class="col-3">
 		<Sidebar>
