--- a/app/templates/subreddit/post.hbs
+++ b/app/templates/subreddit/post.hbs
@@ -9,7 +9,7 @@
 			</p>
 			<h5 class="title">{{model.title}}</h5>
 			{{#unless model.is_self}}
-				<p><a href={{model.url}} target="_blank">{{url-helper model.url}}</a></p>
+				<p><a href={{model.url}} target="_blank" rel="noopener">{{url-helper model.url}}</a></p>
 			{{/unless}}
 		</div>
 	</section>
@@ -17,7 +17,7 @@
 		{{#if model.is_self}}
 			{{{model.selftext_html}}}
 		{{else}}
-			<a href={{model.url}} target="_blank"><img src={{model.url}} /></a>
+			<a href={{model.url}} target="_blank" rel="noopener"><img src={{model.url}} alt=""></a>
 		{{/if}}
 	</section>
 	<section class="actions">
