--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,10 +4,34 @@
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
+	
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item">
-				<div class="btn-group">
+				<div class="btn-group" role="group" aria-label="Basic example">
+					{{#if currentFeed}}
+						<button type="button" class="btn btn-outline-warning">{{currentFeed}}</button>
+						<button type="button" class="btn btn-outline-warning"><i class="fa fa-caret-down"></i></button>
+					{{/if}}
+					{{#if currentSubreddit}}
+						<button type="button" class="btn btn-outline-success" {{action "goToSubreddit" currentSubreddit}}>{{formattedCurrentSubreddit}}</button>
+						<button type="button" class="btn btn-outline-success"><i class="fa fa-caret-down"></i></button>
+					{{/if}}
+					{{#if currentSubreddit}}
+						<button type="button" class="btn btn-outline-success">hot</button>
+						<button type="button" class="btn btn-outline-success"><i class="fa fa-caret-down"></i></button>
+					{{/if}}
+				</div>
+				
+				
+				
+				
+				
+				
+				
+				
+				
+				<!-- <div class="btn-group">
 					<button type="button" class="btn btn-outline-success" {{action "goTo" currentSubreddit}}>{{formattedCurrentSubreddit}}</button>
 					<button type="button" class="btn btn-outline-success dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<span class="sr-only">Toggle Dropdown</span>
@@ -19,8 +43,9 @@
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="#">Separated link</a>
 					</div>
-				</div>
+				</div> -->
 			</li>
+			
 		</ul>
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item dropdown">
@@ -41,7 +66,7 @@
 <div class="container-fluid">
 	<div class="row">
 		{{#subreddit-list/table model=subreddits onTransition=(action "goToRoute") onSelection=(action "goToSubreddit")}}{{/subreddit-list/table}}
-		<div class="main col-10">
+		<div class="main col-11">
 			{{outlet}}
 		</div>
 	</div>
