--- a/app/templates/subreddit/index.hbs
+++ b/app/templates/subreddit/index.hbs
@@ -1,2 +1,2 @@
-<Posts @model={{model}} @onSelection={{action "goToPost"}} />
+<!-- <Posts @model={{model}} @onSelection={{action "goToPost"}} /> -->
 {{outlet}}
