--- a/app/styles/components/post.scss
+++ b/app/styles/components/post.scss
@@ -9,7 +9,8 @@ $padding: 0.5em;
 	border-bottom: none;
 	
 	&:first-child {
-		margin-top: 1em;
+		border-top-left-radius: 0.3em;
+		border-top-right-radius: 0.3em;
 	}
 	
 	.thumbnail {
