--- a/app/templates/subreddit.hbs
+++ b/app/templates/subreddit.hbs
@@ -1,13 +1,19 @@
 <div class="row">
-	<div class="col-9">
-		{{outlet}}
+	<div class="{{unless currentPost "col-9" "col-4"}}">
+		<!-- {{outlet}} -->
+		<Posts @model={{model}} @onSelection={{action "goToPost"}} />
 	</div>
-	<div class="col-3">
+	<div class="{{unless currentPost "col-3" "col-8"}}">
 		<Sidebar>
-			<h4>r/{{model.display_name}}</h4>
-			<h5>Subscribers: {{model.subscribers}}</h5>
-			<h5>Online: {{model.active_user_count}}</h5>
-			<p>{{model.public_description}}</p>
+			{{#unless currentPost}}
+				Subreddit
+				<!-- <h4>r/{{model.display_name}}</h4>
+				<h5>Subscribers: {{model.subscribers}}</h5>
+				<h5>Online: {{model.active_user_count}}</h5>
+				<p>{{model.public_description}}</p> -->
+			{{else}}
+				{{outlet}}
+			{{/unless}}
 		</Sidebar>
 	</div>
 </div>
