--- a/app/templates/components/posts.hbs
+++ b/app/templates/components/posts.hbs
@@ -1,3 +1,5 @@
-{{#each model as |post|}}
-	<Post @model={{post}} @onSelection={{action onSelection}} />
-{{/each}}
+<Panel>
+	{{#each model as |post|}}
+		<Post @model={{post}} @onSelection={{action onSelection}} />
+	{{/each}}
+</Panel>
