--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,19 +5,19 @@
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		<ul class="navbar-nav mr-auto">
+		<ul class="navbar-nav ml-2">
 			<li class="nav-item">
 				<div class="btn-group" role="group" aria-label="Basic example">
 					{{#if currentFeed}}
-						<button type="button" class="btn btn-outline-warning">{{currentFeed}}</button>
+						<button type="button" class="btn btn-outline-warning">/{{currentFeed}}</button>
 						<button type="button" class="btn btn-outline-warning"><i class="fa fa-caret-down"></i></button>
 					{{/if}}
 					{{#if currentSubreddit}}
-						<button type="button" class="btn btn-outline-success" {{action "goToSubreddit" currentSubreddit}}>{{formattedCurrentSubreddit}}</button>
+						<button type="button" class="btn btn-outline-success" {{action "goToSubreddit" currentSubreddit}}>/{{formattedCurrentSubreddit}}</button>
 						<button type="button" class="btn btn-outline-success"><i class="fa fa-caret-down"></i></button>
 					{{/if}}
 					{{#if currentSubreddit}}
-						<button type="button" class="btn btn-outline-success">hot</button>
+						<button type="button" class="btn btn-outline-success">/hot</button>
 						<button type="button" class="btn btn-outline-success"><i class="fa fa-caret-down"></i></button>
 					{{/if}}
 				</div>
@@ -42,7 +42,7 @@
 <div class="container-fluid">
 	<div class="row">
 		{{#subreddit-list/table model=subreddits onTransition=(action "goToRoute") onSelection=(action "goToSubreddit")}}{{/subreddit-list/table}}
-		<div class="main col-11">
+		<div class="main col-10">
 			{{outlet}}
 		</div>
 	</div>
