--- a/app/templates/subreddit/loading.hbs
+++ b/app/templates/subreddit/loading.hbs
@@ -1,20 +1,1 @@
-<div>
-	<div class="score">
-		{{#content-placeholders as |placeholder|}}
-			{{placeholder.img}}
-		{{/content-placeholders}}
-	</div>
-	<div class="thumbnail">
-		
-		{{#content-placeholders as |placeholder|}}
-			{{placeholder.img}}
-		{{/content-placeholders}}
-	</div>
-	<div class="content">
-		{{#content-placeholders as |placeholder|}}
-			{{placeholder.text lines=2}}
-			{{placeholder.text lines=1}}
-			{{placeholder.text lines=1}}
-		{{/content-placeholders}}
-	</div>
-</div>
+Inner
