--- a/app/styles/components/post.scss
+++ b/app/styles/components/post.scss
@@ -7,9 +7,19 @@ $padding: 0.5em;
 	background: $background-light;
 	border-bottom: 1px solid $line-color;
 	
+	&.active {
+		background: lightgreen;
+	}
+	
 	&:first-child {
 		border-top-left-radius: 0.3em;
 		border-top-right-radius: 0.3em;
+	}
+	
+	&:last-child {
+		border-bottom-left-radius: 0.3em;
+		border-bottom-right-radius: 0.3em;
+		border-bottom: none;
 	}
 	
 	.thumbnail {
