--- a/app/templates/subreddit.hbs
+++ b/app/templates/subreddit.hbs
@@ -1,9 +1,9 @@
 <div class="row">
 	<div class="{{unless currentPost "col-9" "col-4"}}">
 		<!-- {{outlet}} -->
-		<Posts @model={{model}} @onSelection={{action "goToPost"}} />
+		<Posts @model={{model}} @active={{currentPost}} @onSelection={{action "goToPost"}} />
 	</div>
-	<div class="{{unless currentPost "col-3" "col-8"}}">
+	<div class="{{unless currentPost "col-3" "col-8"}} pl-0 ml-0">
 		<Panel>
 			{{#unless currentPost}}
 				Subreddit
