--- a/app/templates/feed.hbs
+++ b/app/templates/feed.hbs
@@ -2,7 +2,7 @@
 	<div class="col-9">
 		{{outlet}}
 	</div>
-	<div class="col-3">
+	<div class="col-3 pl-0 ml-0">
 		<Sidebar>
 			Feed Sidebar<br>
 			Test
