--- a/app/templates/feed/loading.hbs
+++ b/app/templates/feed/loading.hbs
@@ -1,20 +1,16 @@
-<div>
-	<div class="score">
-		{{#content-placeholders as |placeholder|}}
-			{{placeholder.img}}
-		{{/content-placeholders}}
-	</div>
-	<div class="thumbnail">
-		
-		{{#content-placeholders as |placeholder|}}
-			{{placeholder.img}}
-		{{/content-placeholders}}
-	</div>
-	<div class="content">
-		{{#content-placeholders as |placeholder|}}
-			{{placeholder.text lines=2}}
-			{{placeholder.text lines=1}}
-			{{placeholder.text lines=1}}
-		{{/content-placeholders}}
-	</div>
-</div>
+<Panel class="p-3">
+	{{#content-placeholders as |placeholder|}}
+		{{placeholder.heading img=true}}
+		{{placeholder.text lines=2}}
+	{{/content-placeholders}}
+	<br>
+	{{#content-placeholders as |placeholder|}}
+		{{placeholder.heading img=true}}
+		{{placeholder.text lines=2}}
+	{{/content-placeholders}}
+	<br>
+	{{#content-placeholders as |placeholder|}}
+		{{placeholder.heading img=true}}
+		{{placeholder.text lines=2}}
+	{{/content-placeholders}}
+</Panel>
