--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -41,10 +41,10 @@
 	</div>
 </nav>
 
-<div class="container-fluid">
-	<div class="row">
+<div class="container-fluid h-100">
+	<div class="row h-100">
 		{{#subreddit-list/table model=subreddits onTransition=(action "goToRoute") onSelection=(action "goToSubreddit")}}{{/subreddit-list/table}}
-		<div class="main col-10">
+		<div class="main col-10 h-100">
 			{{outlet}}
 		</div>
 	</div>
