--- a/app/templates/subreddit.hbs
+++ b/app/templates/subreddit.hbs
@@ -1,21 +1,40 @@
-<div class="row">
-	<div class="{{unless currentPost "col-9" "col-4"}}">
-		<!-- {{outlet}} -->
-		<Posts @model={{model}} @active={{currentPost}} @onSelection={{action "goToPost"}} />
+<style>
+
+.scroller {
+	overflow: scroll !important;
+	height: 100%;
+}
+
+
+</style>
+
+<div class="row h-100">
+	<!-- <div class="scroller h-10">
+	</div> -->
+	<div class="{{unless currentPost "col-9" "col-4"}} scroller h-100 py-3">
+		<Posts @model={{model}} @active={{currentPost}} @onSelection={{action "goToPost"}} class="h-100" />
 	</div>
-	<div class="{{unless currentPost "col-3" "col-8"}} pl-0 ml-0">
-		<Panel>
-			{{#unless currentPost}}
-				<Sidebar>
-					Subreddit
-					<!-- <h4>r/{{model.display_name}}</h4>
-					<h5>Subscribers: {{model.subscribers}}</h5>
-					<h5>Online: {{model.active_user_count}}</h5>
-					<p>{{model.public_description}}</p> -->
-				</Sidebar>
-			{{else}}
+	{{#unless currentPost}}
+		<div class="col-3 pl-0 ml-0">
+			<Panel>
+				{{#unless currentPost}}
+					<Sidebar>
+						Subreddit
+						<!-- <h4>r/{{model.display_name}}</h4>
+						<h5>Subscribers: {{model.subscribers}}</h5>
+						<h5>Online: {{model.active_user_count}}</h5>
+						<p>{{model.public_description}}</p> -->
+					</Sidebar>
+				{{else}}
+					{{outlet}}
+				{{/unless}}
+			</Panel>
+		</div>
+	{{else}}
+		<div class="col-8 pl-0 ml-0">
+			<Panel>
 				{{outlet}}
-			{{/unless}}
-		</Panel>
-	</div>
+			</Panel>
+		</div>
+	{{/unless}}
 </div>
