--- a/app/styles/components/_all.scss
+++ b/app/styles/components/_all.scss
@@ -4,5 +4,6 @@
 @import "post-score";
 @import "post";
 @import "posts";
+@import "scroll-container";
 @import "sidebar";
 @import "subreddit-list";
