--- a/app/templates/subreddit.hbs
+++ b/app/templates/subreddit.hbs
@@ -1,18 +1,8 @@
-<style>
-
-.scroller {
-	overflow: scroll !important;
-	height: 100%;
-}
-
-
-</style>
-
-<div class="row h-100">
-	<!-- <div class="scroller h-10">
-	</div> -->
-	<div class="{{unless currentPost "col-9" "col-4"}} scroller h-100 py-3">
-		<Posts @model={{model}} @active={{currentPost}} @onSelection={{action "goToPost"}} class="h-100" />
+<div class="row">
+	<div class="{{unless currentPost "col-9" "col-4"}} p-0">
+		<ScrollContainer>
+			<Posts @model={{model}} @active={{currentPost}} @onSelection={{action "goToPost"}} />
+		</ScrollContainer>
 	</div>
 	{{#unless currentPost}}
 		<div class="col-3 pl-0 ml-0">
@@ -31,10 +21,12 @@
 			</Panel>
 		</div>
 	{{else}}
-		<div class="col-8 pl-0 ml-0">
-			<Panel>
-				{{outlet}}
-			</Panel>
+		<div class="col-8 px-0 mx-0">
+			<ScrollContainer>
+				<Panel>
+					{{outlet}}
+				</Panel>
+			</ScrollContainer>
 		</div>
 	{{/unless}}
 </div>
